# jupyterhub-practice

./: .gitignore  Dockerfile  create-dockernels.sh  docker-compose.yaml  jupyterhub_config.py  localhost.crt  localhost.key  pyproject.toml
dockernels/: Dockerfile_python311  Dockerfile_python37  kernel.json
dockernels/r_lang/: Dockerfile
